--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 .Rproj.user
 .Rhistory
 .RData
+first_knitr-concordance.tex
+first_knitr.log
+first_knitr.pdf
+first_knitr.synctex.gz
+first_knitr.tex
